<resources>
    <string name="app_name">Persistenz</string>
    <string name="appPref_title">Application-Preferences</string>
    <string name="filesystem_title">Dateisystem</string>
    <string name="SQLite_title">SQLite</string>
    <string name="ContProvider_title">Content Provider</string>
    <string name="appPref_counterText">MainActivity.onResume() wurde seit der Installation dieser App %1$s mal aufgerufen. Juhuu.</string>
    <string name="editTeaPreferences">Tea-Prefs editieren</string>
    <string name="setDefaultTeaPreferences">Tea-Prefs default setzen</string>
    <string name="teaPreferences">Tee Präferenzen</string>
    <string name="teaPreferencesSummary">Wetsch denn du gsüesste Tee?</string>
    <string name="teaPreferencesTitle">Präferenzierter Tee</string>
    <string name="teaPreferencesSweetenerSummary">Mit was wetsch denn du de Tee süesse?</string>
    <string name="teaPreferencesSweetenerTitle">Womit soll der Tee gesüsst werden?</string>
    <string name="teaPreferencesPreferredTeaExample">z.B. "Hopfätee"</string>
    <string name="teaPreferencesPreferredTeaTitle">Bevorzugte Marke/Sorte</string>
    <string name="teaPrefsSummary">Ich trinke am liebsten %1$s</string>
    <string name="teaPrefsWithSweetenerSummary">, mit %1$s gesüsst.</string>
    <string name="useExternalStorage">Externen Speicher benutzen</string>
    <string name="btnSave">Speichern</string>
    <string name="btnLoad">Laden</string>
    <string name="extStorageIsMounted">External Storage is mounted (writable)</string>
    <string name="btnCreateNotice">Notiz erzeugen</string>
    <string name="btnShowNotice">Notiz zeigen</string>
</resources>
