<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <TextView
            android:id="@+id/txtAppPref"
            style="@style/MainSectionHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/appPref_title" />

        <TextView
            android:id="@+id/txtResumeText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="txtCounterText" />

        <TextView
            android:id="@+id/txtTeaPrefSummary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp" />

        <Button
            android:id="@+id/btnEditPreferences"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/editTeaPreferences" />

        <Button
            android:id="@+id/btnSetPreferences"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/setDefaultTeaPreferences" />

        <TextView
            style="@style/MainSectionHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/filesystem_title" />

        <CheckBox
            android:id="@+id/cbExternerSpeicher"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/useExternalStorage" />

        <TextView
            android:id="@+id/lblExtStorage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="20dp"
            android:paddingLeft="35dp"
            android:text="@string/extStorageIsMounted" />

        <TextView
            android:id="@+id/lblTextFileContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp" />

        <EditText
            android:id="@+id/editedTxtFileText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType=""
            android:text="" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:weightSum="2">

            <Button
                android:id="@+id/btnSave"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:text="@string/btnSave" />

            <Button
                android:id="@+id/btnLoad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:text="@string/btnLoad" />
        </LinearLayout>

        <TextView
            style="@style/MainSectionHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/SQLite_title" />

        <Button
            android:id="@+id/btnCreateNotice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnCreateNotice"/>

        <Button
            android:id="@+id/btnShowNotice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnShowNotice"/>

        <TextView
            style="@style/MainSectionHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ContProvider_title" />
    </LinearLayout>
</ScrollView>
